Update favicon/ Fix welcome screen width

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spotireact",
+  "name": "apple-music-js",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://tannerv.com/music",
