--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "feather-icons": "^4.7.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-lazy-load": "^3.0.13",
     "react-rangeslider": "^2.2.0",
     "react-redux": "^5.0.7",
     "react-scripts": "^2.1.3",
